2005-08-07  Phil Blundell  <pb@reciva.com>

	* gpeclockface.c: Keep up with Cairo API changes.

2005-07-25  Florian Boor <florian@kernelconcepts.de>

	* gtkdatecombo.c: Remove signal handler workaround which isn't 
	                  necessary anymore.

2005-06-23  Phil Blundell  <pb@reciva.com>

	* configure.ac (DEPS): Demand glib-2.0 >= 2.6.

2005-06-19  Phil Blundell  <pb@reciva.com>

	* Version 0.102 released.

2005-06-19  Florian Boor <florian@kernelconcepts.de>

	*  Makefile.am: Remove debian/compat from EXTRA_DIST.

2005-06-19  Phil Blundell  <pb@reciva.com>

	* gpewindowlist.c: Add some documentation.
	(gpe_window_list_get_type): Return value is GType, not GtkType.
	* gpe/gpewindowlist.h: Keep in step.

	* dirbrowser.c (scan_dir): Accept symlinks to directories.  Use
	stat to find the type of an object if readdir doesn't know.

2005-06-15  Florian Boor <florian@kernelconcepts.de>

	* translabel.c: Fix compile error with NLS enabled.
	
2005-06-08  Florian Boor <florian@kernelconcepts.de>

	* translabel.c: Some more changes to support systems without NLS.
	* dirbrowser.c, errorbox.c, gpetimesel.c, gtksimplemenu.c, pixmaps.c,
	  question.c, smallbox.c, translabel.c: Make i8n stuff depend on ENABLE_NLS.

2005-06-06  Florian Boor <florian@kernelconcepts.de>

	* gpehelp.c: Fix double-freeing some data in some situation.
	* gpehelp.c: Add documentation, rename and relocate configfile.
	* doc/tmpl/gpehelp.sgml: Remove documentation.

2005-06-04  Philippe De Swert  <philippedeswert@scarlet.be>
	
	* gpehelp.c: added new handling of help
	* gpe/gpehelp.h: modified according to changes in gpehelp.c

2005-06-04  Florian Boor <florian@kernelconcepts.de>

	* configure.ac: Version to 0.101, new switch: --enable-hildon
	* configure.ac, Makefile.am: Add support to configure for maemo environment.
	* gtkdatecombo.c, pixmaps.c: Obey some minor differences between plain
	                             GTK and maemo environment.

2005-05-26  Luc Pionchon  <luc@handhelds.org>
